# hngDetails

djangoapi_home/: db.sqlite3  procfile  pyproject.toml  render.yaml  requirements.txt
djangoapi_home/details/: models.py  serializers.py  urls.py  views.py
djangoapi_home/details/migrations/: 0001_initial.py  0002_alter_profile_backend.py
djangoapi_home/djangoapi/: settings.py  urls.py
